# ImageSimilarity

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  image_similarity.ipynb  main.ipynb  requirements.txt  setup.cfg
src/: image_similarity.ipynb  image_similarity.py
src/ImgSim/: image_similarity.py
