[metadata]
name = TEMPLATE
version = 0.1.0
description = "BRIEF DESCRIPTION"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
install_requires =
    ipykernel == 6.13.1
    pandas == 1.4.4
    numpy == 1.23.3

[options.packages.find]
where = src