[metadata]
name = image_similarity
version = 0.1.1
description = "A simple class for leveraging neural network feature embeddings to assess image similarity"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
install_requires =
    ipykernel == 6.13.1
    torch
    torchvision
    Pillow == 9.2.0
    matplotlib == 3.6.3

[options.packages.find]
where = src